Update checkbox label for chain management option

--- a/index.html
+++ b/index.html
@@ -1679,7 +1679,7 @@
           </div>
           <div class="calc-checkboxes dreveni-extras">
             <label><input type="checkbox" class="dreveni-extra" data-label="Колани" data-value="5">Колани (+5 €/м²)</label>
-            <label><input type="checkbox" class="dreveni-extra" data-label="Управление със синджир" data-value="3.5">Управление със синджир (+3.50 €/м²)</label>
+            <label><input type="checkbox" class="dreveni-extra" data-label="Управление със синджир(редуктор)" data-value="3.5">Управление със синджир (+3.50 €/м²)</label>
           </div>
           <div class="calc-result" id="dreveni-result">—</div>
           <button class="add-to-cart-btn" onclick="addDreveniToCart()" id="dreveni-add-cart" style="display:none;">Добави в кошницата</button>
