--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   .cart-button:hover{transform:translateY(-2px)}
   .cart-empty{text-align:center;padding:40px 20px;color:#666}
   .cart-empty svg{width:80px;height:80px;fill:#E9ECEF;margin-bottom:20px}
-  .add-to-cart-btn{width:100%;max-width:200px;padding:12px;background:linear-gradient(135deg,#D4AF37,#F4D03F);color:#1A1A1A;font-weight:600;border:none;border-radius:8px;cursor:pointer;margin-top:10px;transition:transform .2s}
+  .add-to-cart-btn{width:100%;max-width:200px;padding:12px;background:linear-gradient(135deg,#D4AF37,#F4D03F);color:#1A1A1A;font-weight:600;border:none;border-radius:8px;cursor:pointer;margin:10px auto 0 auto;display:block;transition:transform .2s}
   .add-to-cart-btn:hover{transform:translateY(-2px)}
   .order-modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);z-index:2000;align-items:center;justify-content:center}
   .order-modal.open{display:flex}
